k8s/n8n/n8n-deployment.yaml
# n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: automation
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      serviceAccountName: n8n-sa
      containers:
        - name: n8n
          image: n8nio/n8n
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: n8n-storage
              mountPath: /home/node/.n8n
            - name: automations
              mountPath: /automations
      volumes:
        - name: n8n-storage
          persistentVolumeClaim:
            claimName: n8n-pvc
        - name: automations
          hostPath:
            path: /automations
            type: DirectoryOrCreate
