k8s/n8n/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: automation
  name: n8n
  labels:
    app: n8n
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
